ingress-updated-class/ingress-proxy-partner-psd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"default:partner-proxy-master-svc","ingressName":"default:proxy-partner","hostname":"partner-proxy.psd.pernambucanas.com.br","path":"/api/partner-proxy/v1","allNodes":false},{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"default:partner-proxy-master-svc","ingressName":"default:proxy-partner","hostname":"partner-proxy.psd.pernambucanas.com.br","path":"/proxy","allNodes":false}]'
    kubernetes.io/ingress.class: controller-partner-proxy
    nginx.ingress.kubernetes.io/whitelist-source-range: 35.235.0.156/32,35.235.0.157/32,200.25.46.224/27,170.83.215.128/28,200.155.60.240/28,179.191.185.0/24,179.191.187.0/24,187.19.192.160/27,189.4.5.64/28,179.191.166.0/24,201.17.169.96/28,167.249.160.16/28,66.206.21.216/29,201.17.29.16/28,152.255.34.80/28,185.76.9.93/32,201.78.203.0/27,206.41.74.0/28,187.33.240.240/28,200.160.97.176/28,179.191.190.0/24,84.17.42.237/32,200.55.243.48/28,200.179.70.48/28,200.248.78.96/28,84.17.62.194/32,212.102.5 [...]
  labels:
    app: partner-proxy
  name: proxy-partner-1.4
  namespace: default
spec:
  rules:
  - host: partner-proxy.psd.pernambucanas.com.br
    http:
      paths:
      - backend:
          service:
            name: partner-proxy-master-svc
            port:
              number: 80
        path: /api/partner-proxy/v1
        pathType: ImplementationSpecific
      - backend:
          service:
            name: partner-proxy-master-svc
            port:
              number: 80
        path: /proxy
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - proxy-partner-proxy.psd.pernambucanas.com.br
    secretName: cert-wildcard-prd
