ingress-updated-class/ingress-sso-keycloak-ingress-psd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"devops:sso-keycloak-service","ingressName":"devops:sso-keycloak-ingress","hostname":"keycloack.prod.psd.pernambucanas.com.br","allNodes":false}]'
    kubernetes.io/ingress.class: controller-default
  name: sso-keycloak-ingress-1.4
  namespace: devops
spec:
  rules:
  - host: keycloack.prod.psd.pernambucanas.com.br
    http:
      paths:
      - backend:
          service:
            name: sso-keycloak-service
            port:
              number: 80
        pathType: ImplementationSpecific
