ingress-updated-class/ingress-troubleshoot-ingress-psd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: troubleshoot.psd.pernambucanas.com.br
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"troubleshoot:echo-http-troubleshoot-service","ingressName":"troubleshoot:troubleshoot-ingress","hostname":"troubleshoot.psd.pernambucanas.com.br","allNodes":false}]'
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: troubleshoot-ingress
  namespace: troubleshoot
spec:
  rules:
  - host: troubleshoot.psd.pernambucanas.com.br
    http:
      paths:
      - backend:
          service:
            name: echo-http-troubleshoot-service
            port:
              number: 80
        pathType: ImplementationSpecific
